--- a/oid4vci/Cargo.toml
+++ b/oid4vci/Cargo.toml
@@ -26,6 +26,11 @@ serde_json.workspace = true
 serde_urlencoded.workspace = true
 serde_with.workspace = true
 tokio.workspace = true
+rsa.workspace = true
+sha2.workspace = true
+sha1.workspace = true
+libaes.workspace = true
+base64.workspace = true
 
 [dev-dependencies]
 wiremock = "0.5"
