--- a/oid4vci/Cargo.toml
+++ b/oid4vci/Cargo.toml
@@ -31,6 +31,7 @@ sha2.workspace = true
 sha1.workspace = true
 libaes.workspace = true
 base64.workspace = true
+hmac.workspace = true
 
 [dev-dependencies]
 wiremock = "0.5"
