--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ libaes = "0.7.0"
 sha1 = "0.10.6"
 base64 = "0.22.1"
 hmac = "0.12.1"
+constant_time_eq = "0.3.0"
 # TODO: Fix these dependencies once publishing to crates.io is automated.
 [dependencies]
 oid4vc-core = { path = "oid4vc-core" }
@@ -54,6 +55,7 @@ oid4vp = { path = "oid4vp" }
 siopv2 = { path = "siopv2" }
 oid4vc-manager = { path = "oid4vc-manager" }
 dif-presentation-exchange = { path = "dif-presentation-exchange" }
+
 
 
 
