--- a/oid4vci/Cargo.toml
+++ b/oid4vci/Cargo.toml
@@ -32,6 +32,7 @@ sha1.workspace = true
 libaes.workspace = true
 base64.workspace = true
 hmac.workspace = true
+constant_time_eq.workspace = true
 
 [dev-dependencies]
 wiremock = "0.5"
