--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ reqwest-retry = "0.3"
 serde = { version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 serde_urlencoded = "0.7"
-serde_with = "3.0"
+serde_with = { version = "3.0", features = ["macros"]}
 tokio = { version = "1.26.0", features = ["rt", "macros", "rt-multi-thread"] }
 url = { version = "2", features = ["serde"] }
 rsa = { version = "0.9.6", features = ["serde"] }
