--- a/oid4vci/Cargo.toml
+++ b/oid4vci/Cargo.toml
@@ -18,6 +18,7 @@ getset.workspace = true
 lazy_static = "1.4"
 jsonwebtoken = "8.3"
 paste = "1.0"
+futures = "0.3.30"
 reqwest.workspace = true
 reqwest-middleware.workspace = true
 reqwest-retry.workspace = true
